--- a/client/src/components/EventsCard/BotSlider/BotSlider.css
+++ b/client/src/components/EventsCard/BotSlider/BotSlider.css
@@ -64,9 +64,13 @@
     top: 90%;
   }
 
-  .text {
+  .bot-text {
     background-color: rgba(253, 28, 99, 0.7);
     color: white;
     font-size: 16px;
     padding: 16px 32px;
+  }
+
+  .wiki-text{
+    color: rgba(253, 28, 99, 1);
   }
