--- a/client/src/components/EventsCard/BotSlider/BotSlider.css
+++ b/client/src/components/EventsCard/BotSlider/BotSlider.css
@@ -1,13 +1,11 @@
 .content {
     overflow: hidden;
   }
-  
+
   .content-image{
-    width: 100%;
-    height: 100vh;
     overflow: hidden;
   }
-  
+
   .content .content-overlay {
     background: rgba(0,0,0,0.7);
     position: absolute;
@@ -68,9 +66,10 @@
     background-color: rgba(253, 28, 99, 0.7);
     color: white;
     font-size: 16px;
-    padding: 16px 32px;
   }
 
   .wiki-text{
     color: rgba(253, 28, 99, 1);
+    background: white;
+    font-size: 16px;
   }
