--- a/client/src/components/EventsCard/EventsCard.css
+++ b/client/src/components/EventsCard/EventsCard.css
@@ -105,8 +105,9 @@
     margin-bottom: 3%;
 }
 
-.more-info-img{
-    max-width: 100%;
+.responsive-more-info {
+  width: 100%;
+  height: auto;
 }
 
 .card-category{
