--- a/client/src/components/EventsCard/IntelBot/IntelBot.css
+++ b/client/src/components/EventsCard/IntelBot/IntelBot.css
@@ -2,6 +2,16 @@
     text-align: center;
 }
 
+.bot-modal{
+    position: absolute;
+    float: left;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 70%;
+    height: 100%;
+}
+
 .monkey-icon{
     width: 8%;
 }
