--- a/client/src/components/EventsCard/IntelBot/IntelBot.css
+++ b/client/src/components/EventsCard/IntelBot/IntelBot.css
@@ -3,13 +3,10 @@
 }
 
 .bot-modal{
-    position: absolute;
-    float: left;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 70%;
-    height: 100%;
+    max-width: 45% !important;
+    margin-left: 30%;
+    max-height: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.46), 0 6px 20px 0 rgba(0, 0, 0, 0.46);
 }
 
 .monkey-icon{
