--- a/client/src/components/WhyCard/WhyCard.css
+++ b/client/src/components/WhyCard/WhyCard.css
@@ -6,7 +6,7 @@
 
 .why_inner {
 	position: fixed;
-	width:350px;
+	width:355px;
 	z-index: 3;
 }
 
@@ -14,7 +14,8 @@
 	text-align: left;
 	padding-top:none;
 	padding-bottom:none;
-	margin-left:10px;
+	margin-left:15px;
+	margin-right:5px;
 	padding-right:2px;
 	color: rgb(107, 107, 107);
 }
