--- a/client/src/components/EventsCard/EventsCard.css
+++ b/client/src/components/EventsCard/EventsCard.css
@@ -65,6 +65,7 @@
     margin: 60px 30px;
     display: inline-block;
     width: 23em;
+    border-radius: 12px;
 }
 
 .app-card-list .card .card-body {
@@ -76,13 +77,13 @@
 }
 
 .card-title{
-    height: 1.3em;
+    height: 70px;
+    font: normal normal normal 20px/1.4em georgia,palatino,book antiqua,palatino linotype,serif;
+    color: rgb(107 107 107);
     text-align: center;
-    margin-bottom: 15%;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    font-size: 1.3em;
-    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    white-space: pre-line;
 }
 
 #modal-info{
@@ -112,11 +113,12 @@
 }
 
 .card-category{
-    text-align: center;
+    margin-bottom: 0;
+    color: rgb(107 107 107);
 }
 
-.date{
-    font-style: italic;
+.card-date{
+    color: rgb(107 107 107);
 }
 
 .aws-btn {
@@ -137,9 +139,6 @@
     --button-default-border-radius: 8px !important;
     --button-horizontal-padding: 20px !important;
     --button-raise-level: 4px !important;
-}
-#eventcard{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.46), 0 6px 20px 0 rgba(0, 0, 0, 0.46);
 }
 
 #cardbody{
