--- a/client/src/pages/Events.css
+++ b/client/src/pages/Events.css
@@ -1,14 +1,13 @@
 
 * {
-    font-family: system-ui;
     margin: 0;
     padding: 0;
   }
   .event-body {
     width: 100%;
     height: 100%;
+    background-color: #fddac5;
   }
-
   main {
     display: flex;
     background: #fafafc;
