--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,8 +45,7 @@
 
 .parallax {
   /* The image used */
-  background-color: rgba(148, 219, 218, 0.678);
-  background-image: linear-gradient( 135deg, rgb(216, 236, 234) 10%, hsla(323, 56%, 66%, 0.301) 100%);
+  background-image: linear-gradient( 135deg, #CFDCF0 50%, #fddac5 70%);
 }
 
 .sticky {
