--- a/client/src/components/EventsCard/EventsCard.css
+++ b/client/src/components/EventsCard/EventsCard.css
@@ -85,7 +85,20 @@
     justify-content: center;
     white-space: pre-line;
 }
-
+.card-overlay:before {
+	content: '';
+	position: absolute;
+	background: linear-gradient(rgba(253, 218, 197, 0.212), rgb(253, 218, 197, 0.2));
+	border-radius: 5px;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index:1;
+	border-radius: 20px 20px 0 0;
+}
+.card-image {
+}
 #modal-info{
     max-width: 45% !important;
     margin-left: 30%;
