--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -3,6 +3,8 @@
 	grid-template-columns: 1fr 4fr 5fr;
 }
 .aboutUs {
+    z-index: 2;
+    color: #77797b;
 	margin-right: 80px;
 	text-align: justify;
 	text-justify: inter-word;
@@ -18,8 +20,10 @@
 .footerLogo {
     justify-self: right;
     margin-right: 25px;
+    z-index: 2;
 }
 .footerLinks {
+    z-index: 2;
 	color: #77797b;
 	margin-left: auto;
 	margin-right: 60px;
