--- a/client/src/components/Frame/Frame.css
+++ b/client/src/components/Frame/Frame.css
@@ -20,6 +20,8 @@
   top: 0;
 	position: relative;
 	overflow: hidden;
+	border: 0.5px solid #717379;
+	border-radius: 4px;
 }
 .frame img {
 	width: 100%;
