--- a/client/src/pages/Events.css
+++ b/client/src/pages/Events.css
@@ -1,188 +1,213 @@
-
 * {
-    margin: 0;
-    padding: 0;
-  }
-  .event-body {
-    width: 100%;
-    height: 100%;
-    background-color: #fee8d8;
-  }
-  main {
-    display: flex;
-    background: #fafafc;
-    width: 100%;
-    height: 100%;
-    position: relative;
-  }
-  .sidebar {
-    width: 290px;
-    background-image: linear-gradient(to top right, #ff6e61, #e6938c);
-    background-size: 200%;
-    background-position: 0 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    transform: translateX(-230px);
-    transition: 300ms ease-in-out;
-    z-index: 1;
-    overflow: hidden;
-    cursor: pointer;
-  }
-  .sidebar--expanded {
-    background-size: 100%;
-    background-position: 0 0;
-    transform: translateX(0);
-  }
-  .sidebar:hover {
-    background-position: 0 0;
-  }
-  .sidebar__toggle {
-    width: 100%;
-    height: 100%;
-    height: 4rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    border: none;
-    background: transparent;
-    font-size: 20px;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding-right: 1.8rem;
-    padding-bottom: 0;
-    transition: 300ms ease;
-    cursor: pointer;
-  }
-  .sidebar__toggle:focus {
-    outline: none;
-  }
-  .main-content {
-    margin-top: -3.5em;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 0 3% 4rem;
-    margin-left: 4.5rem;
-    transition: 300ms ease-in-out;
-    position: initial;
-    z-index: 2;
-    overflow-x: scroll;
-  }
-  .main-content--expanded {
-    margin-left: 310px;
-  }
-  .main-content header {
-    height: 5rem;
-    width: 100%;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 1rem 0 2rem;
-  }
-  .main-content header span {
-    width: 16rem;
-    height: 2rem;
-    background: #e5e5e7;
-  }
-  .main-content header ul {
-    list-style: none;
-    display: flex;
-    align-items: center;
-  }
-  .main-content header ul li {
-    width: 6rem;
-    height: 2rem;
-    margin: 0 1rem;
-    background: #e5e5e7;
-  }
-  .main-content header ul li:last-child {
-    margin-right: 0;
-  }
-  .main-content .container {
-    width: 75%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: unset;
-  }
-  .main-content .module--full {
-    width: 100%;
-    height: 400px;
-    box-shadow: 0 3px 8px rgba(211, 211, 211, 0.86), 0 6px 7px rgba(211, 211, 211, 0.69);
-    background: white;
-  }
-  .main-content .module-wrapper {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 1rem;
-  }
-  .main-content .module--half {
-    flex: 1;
-    height: 400px;
-    box-shadow: 0 3px 8px rgba(211, 211, 211, 0.86), 0 6px 7px rgba(211, 211, 211, 0.69);
-    background: white;
-  }
-  .main-content .module--half:first-child {
-    margin-right: 1rem;
-  }
-  .shape {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 360px;
-    background: linear-gradient(#ff6e61 80%, transparent);
-    height: 370px;
-    border-radius: 100%;
-    margin-left: -100px;
-    margin-top: -20px;
-    z-index: -1;
-    opacity: 0;
-    transform: scale(0.4) translateY(-400px) translateX(300px);
-    margin-left: 0;
-    margin-top: 0;
-    transition: 400ms ease;
-  }
-  .shape:nth-child(2) {
-    background: linear-gradient(#fcbd78 80%, transparent);
-    margin-top: 70px;
-    margin-left: 50px;
-    transform: scale(0.4) translateY(-400px);
-    margin-top: 0;
-  }
-  .sidebar--expanded .shape {
-    animation: float 6s infinite alternate;
-    margin-left: -100px;
-    margin-top: -20px;
-    opacity: 0.4;
-    transform: scale(1) translateY(0);
-  }
-  .sidebar--expanded .shape:nth-child(2) {
-    animation: float 20s infinite alternate;
-    transform: scale(1) translateY(100px) translateX(170px);
-  }
-  @keyframes float {
-    20% {
-      top: 0;
-      left: -100px;
-   }
-    50% {
-      left: 0;
-   }
-    100% {
-      top: 500px;
-      left: -100px;
-   }
-  }
+	margin: 0;
+	padding: 0;
+}
+.event-body {
+	width: 100%;
+	height: 100%;
+	background-color: #fee8d8;
+}
+.sidebar {
+	width: 290px;
+	background: linear-gradient(315deg, #dee7f3 10%, #fee8d8 54%);
+	background-size: 200%;
+	background-position: 0 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	transform: translateX(-230px);
+	transition: 300ms ease-in-out;
+	overflow: hidden;
+	cursor: pointer;
+	border-radius: 5px;
+}
+.sidebar--expanded {
+	background-size: 100%;
+	background-position: 0 0;
+	transform: translateX(0);
+}
+.sidebar:hover {
+	background-position: 0 0;
+}
+.sidebar__toggle {
+	width: 100%;
+	height: 100%;
+	height: 4rem;
+	position: fixed;
+	top: 0;
+	left: 0;
+	border: none;
+	background: transparent;
+	font-size: 20px;
+	color: white;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	padding-right: 1.8rem;
+	padding-bottom: 0;
+	transition: 300ms ease;
+	cursor: pointer;
+}
+.sidebar__toggle:focus {
+	outline: none;
+}
+.page-title {
+	height: 80px;
+	display: flex;
 
-  .popover-context{
-    text-align: center;
-    padding: 5px;
-    background:linear-gradient(315deg, #fee8d8 10%, #DEE7F3 54%);
-  }
+	margin-top: 45px;
+	justify-content: center;
+}
+.page-title h2 {
+	align-self: flex-end;
+	line-height: 0.5;
+	color: #707378;
+	margin: 0;
+	font-family: 'Prata', serif;
+	font-weight: 550;
+	font-size: 58px;
+}
+.main-content {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	margin-left: 5rem;
+	transition: 300ms ease-in-out;
+	position: initial;
+	overflow-x: scroll;
+}
+.main-content--expanded {
+	margin-left: 310px;
+}
+.main-content header {
+	height: 5rem;
+	width: 100%;
+	border-radius: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 1rem 0 2rem;
+}
+.main-content header span {
+	width: 16rem;
+	height: 2rem;
+	background: #e5e5e7;
+}
+.main-content header ul {
+	list-style: none;
+	display: flex;
+	align-items: center;
+}
+.main-content header ul li {
+	width: 6rem;
+	height: 2rem;
+	margin: 0 1rem;
+	background: #e5e5e7;
+}
+.main-content header ul li:last-child {
+	margin-right: 0;
+}
+.main-content .container {
+	width: 75%;
+	height: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: unset;
+}
+.main-content .module--full {
+	width: 100%;
+	height: 400px;
+	box-shadow: 0 3px 8px rgba(211, 211, 211, 0.86),
+		0 6px 7px rgba(211, 211, 211, 0.69);
+	background: white;
+}
+.main-content .module-wrapper {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 1rem;
+}
+.main-content .module--half {
+	flex: 1;
+	height: 400px;
+	box-shadow: 0 3px 8px rgba(211, 211, 211, 0.86),
+		0 6px 7px rgba(211, 211, 211, 0.69);
+	background: white;
+}
+.main-content .module--half:first-child {
+	margin-right: 1rem;
+}
+
+.popover-context {
+	text-align: center;
+	padding: 5px;
+	background: linear-gradient(315deg, #fee8d8 10%, #dee7f3 54%);
+}
+.events-toast {
+	position: absolute;
+	margin-left: -150px;
+}
+.events-toast.fade:not(.show) {
+	display: none;
+}
+.email-btn {
+	float: left;
+	margin: 0;
+	margin-left: 30px;
+}
+.favourites-msg {
+	color: #707378;
+	font-family: 'Prata', serif;
+	font-weight: 550;
+	font-size: 30px;
+	margin-top: 200px;
+	text-align: center;
+}
+.favourites-submsg {
+	color: #707378;
+	font-family: 'Prata', serif;
+	font-weight: 550;
+	font-size: 20px;
+	margin-top: 10px;
+	text-align: center;
+}
+.categories-btn {
+	margin-top: 121px;
+}
+.choice-btn {
+	margin-top: 5%;
+	height: 44px;
+	border-radius: 0;
+	background-color: #fcf5f0;
+	border-color: #fcf5f0;
+	color: #707378 !important;
+	box-shadow: none !important;
+	font-size: 17px;
+}
+.choice-btn img {
+  float: right;
+}
+.expanding {
+	height: 44px;
+	border-radius: 0;
+	background-color: transparent !important;
+	border-color: transparent !important;
+	box-shadow: none !important;
+}
+.expanding img {
+	float: right;
+}
+.choice-btn.btn-outline-primary:hover {
+	background-color: white;
+	border-color: white;
+	color: #707378 !important;
+}
+.btn-outline-primary:not(:disabled):not(.disabled).active,
+.btn-outline-primary:not(:disabled):not(.disabled):active,
+.show > .btn-outline-primary.dropdown-toggle {
+	color: #707378 !important;
+	background-color: white;
+	border-color: white;
+}
