--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,7 +46,7 @@
 
 .parallax {
   /* The image used */
-  background-image: linear-gradient( 135deg, #CFDCF0 50%, #fddac5 70%);
+  background-image: linear-gradient( 135deg, #DEE7F3 50%, #fee8d8 70%);
 }
 
 .sticky {
