--- a/client/src/pages/Events.css
+++ b/client/src/pages/Events.css
@@ -191,7 +191,8 @@
 }
 .expanding {
 	height: 44px;
-	border-radius: 0;
+  border-radius: 0;
+  margin-bottom: 20px;
 	background-color: transparent !important;
 	border-color: transparent !important;
 	box-shadow: none !important;
