--- a/client/src/components/Slider/Button.css
+++ b/client/src/components/Slider/Button.css
@@ -22,6 +22,7 @@
   color: white;
   border-radius: 4px;
   cursor: pointer;
+  color: #fee8d8;
 }
 .button span::after {
   content: '';
@@ -31,15 +32,9 @@
   left: -60px;
   width: 90px;
   height: 90px;
-  background: #FF6E61;
-  z-index: -1;
-  box-shadow: 0px 0px 120px #FF6E61, 0px 0px 120px #FF6E61, 0px 0px 120px #FEDAC5, 0px 0px 120px #FEDAC5,0px 0px 120px #FEDAC5;
-  transition: all 0.3s ease;
   transform: rotate(-45deg);
 }
-.button span:hover::after {
-  box-shadow: 40px -20px 0px #FF6E61, 41px -20px 8px rgba(0, 0, 0, 0.3), 80px 20px 0px #FF6E61, 81px 20px 8px rgba(0, 0, 0, 0.3), 120px 60px 0px #FEDAC5, 121px 60px 8px rgba(0, 0, 0, 0.3), 160px 100px 0px #FEDAC5, 161px 100px 8px rgba(0, 0, 0, 0.3), 200px 120px 0px #FEDAC5;
-}
+
 .button span:hover {
-  box-shadow: 4px 34px 24px rgba(0, 0, 0, 0.3);
+  color: #FF6E61;
 }
